--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "flake8 (>=7.3.0,<8.0.0)",
     "isort (>=6.0.1,<7.0.0)",
     "black (>=25.1.0,<26.0.0)"
+    "self (>=2020.12.3,<2021.0.0)"
 ]
 
 
